--- a/campaign.html
+++ b/campaign.html
@@ -214,7 +214,7 @@ a[data-toggle="collapse"] {
 
             <ul class="list-unstyled components">        
                  <li >
-                    <a href="newdash.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+                    <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
                 </li>
                 <li class="active">
                     <a href="campaign.html">Create Campaign</a>
