--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <a href="https://icons8.com/icon/16247/menu"></a>
+
+
 <style type="text/css">
   @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
    
    body {
     font-family: 'Poppins', sans-serif;
     background: #006d6f;
+    width: 100%;
+    height: 100%;
 }
 
 a,
@@ -185,14 +190,14 @@ a[data-toggle="collapse"] {
 .card{
   align-items: center;
   background-color:#fafafa;
-  margin-left: 15px;
+  width:200px;
 }
 
-.card-deck{
+.deck{
   margin-top: 25px;
-  margin-left:30px;
   display: flex;
   flex-wrap:wrap;
+  padding-right: 30px;
 }
 
 
@@ -213,9 +218,15 @@ a[data-toggle="collapse"] {
         display: none;
     }
 
-    #content{
-      margin-right:0px;
-    }
+}
+
+@media (max-width: 526px){
+.card{
+  max-width:180px; 
+}
+#content{
+  margin-right:0;
+}
 }
 </style>
 
@@ -272,13 +283,14 @@ a[data-toggle="collapse"] {
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
-                   <button type="button" id="sidebarCollapse" class="btn btn-light text-sidebar ">
-                        <!-- <i class="fas fa-align-left"></i> --> <span class="navbar-toggler-icon"></span>
+                    <button type="button" id="sidebarCollapse" class="btn btn-light text-sidebar ">
+                        <!-- <i class="fas fa-align-left"></i> --><img src="https://img.icons8.com/windows/22/000000/menu.png"/> <!-- <span class="navbar-toggler-icon"></span> -->
                         
                     </button>
                     <button class="btn btn-light d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <!-- <i class="fas fa-align-justify"></i> -->  <span class="navbar-toggler-icon"></span>
+                        <!-- <i class="fas fa-align-justify"></i> --><img src="https://img.icons8.com/windows/22/000000/menu.png"/> <!--  <span class="navbar-toggler-icon"></span> -->
                     </button>
+
 
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -297,9 +309,9 @@ a[data-toggle="collapse"] {
             <h3 class="header">Join Influencers</h3>
 
                 
-                <div class="row" style="z-index: 95">    
-                  <div class="card-deck">
-                        <div class="card" style="width:200px">
+                <div class="row ml-4" style="z-index: 95">    
+                  <div class="col-auto mb-3 deck">
+                        <div class="card">
                            <img class="card-img-top" src="https://pbs.twimg.com/profile_images/948427178357571585/IYbkflYo.jpg" alt="Card image" style="width:100%;">
                            <div class="card-body">
                             <h4 class="card-title">Akriti Rana Gill</h4>
@@ -307,24 +319,32 @@ a[data-toggle="collapse"] {
                         </div>
                   </div>
 
-                 <div class="card-deck">
-                        <div class="card" style="width:200px">
+                 <div class="col-auto mb-3 deck">
+                        <div class="card" >
                            <img class="card-img-top" src="https://pbs.twimg.com/profile_images/948427178357571585/IYbkflYo.jpg" alt="Card image" style="width:100%;">
                            <div class="card-body">
                             <h4 class="card-title">Akriti Rana Gill</h4>
                            </div>
                         </div>
                   </div>
-                  <div class="card-deck">
-                        <div class="card" style="width:200px">
+                  <div class="col-auto mb- deck">
+                        <div class="card" >
                            <img class="card-img-top" src="https://pbs.twimg.com/profile_images/948427178357571585/IYbkflYo.jpg" alt="Card image" style="width:100%;">
                            <div class="card-body">
                             <h4 class="card-title">Akriti Rana Gill</h4>
                            </div>
                         </div>
                   </div>
-                  <div class="card-deck">
-                        <div class="card" style="width:200px">
+                  <div class="col-auto mb-3 deck">
+                        <div class="card" >
+                           <img class="card-img-top" src="https://pbs.twimg.com/profile_images/948427178357571585/IYbkflYo.jpg" alt="Card image" style="width:100%;">
+                           <div class="card-body">
+                            <h4 class="card-title">Akriti Rana Gill</h4>
+                           </div>
+                        </div>
+                  </div>
+                  <div class="col-auto mb-3 deck">
+                        <div class="card" >
                            <img class="card-img-top" src="https://pbs.twimg.com/profile_images/948427178357571585/IYbkflYo.jpg" alt="Card image" style="width:100%;">
                            <div class="card-body">
                             <h4 class="card-title">Akriti Rana Gill</h4>
