--- a/influencer.html
+++ b/influencer.html
@@ -14,6 +14,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+  <a href="https://icons8.com/icon/16247/menu"></a>
+
 <style type="text/css">
    @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
    
@@ -255,18 +258,18 @@ a[data-toggle="collapse"] {
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-light text-sidebar ">
-                        <!-- <i class="fas fa-align-left"></i> --> <span class="navbar-toggler-icon"></span>
+                        <!-- <i class="fas fa-align-left"></i> --> <img src="https://img.icons8.com/windows/22/000000/menu.png"/>
                         
                     </button>
                     <button class="btn btn-light d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <!-- <i class="fas fa-align-justify"></i> -->  <span class="navbar-toggler-icon"></span>
+                        <!-- <i class="fas fa-align-justify"></i> -->  <img src="https://img.icons8.com/windows/22/000000/menu.png"/>
                     </button>
 
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="newdash.html">For Brand</a>
+                                <a class="nav-link" href="index.html">For Brand</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="influencer.html">For Influencer</a>
