--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ a[data-toggle="collapse"] {
 ----------------------------------------------------- */
 @media (max-width: 1200px){
 	.box{
-		height: 45vh;
+		height:330px;
 
 	}
 }
@@ -257,12 +257,11 @@ a[data-toggle="collapse"] {
 }*/
 #content{
   margin-right:0;}
-
-  .box{
+.box{
       width:170px;
       text-align: center;
       padding:5px;
-    }
+}
 
 }
 </style>
@@ -374,8 +373,8 @@ a[data-toggle="collapse"] {
                 
                 <div class="row" id="buttons">    
                 
-               <button class="btn btn-primary dropdown-toggle mr-4" type="button" data-toggle="dropdown"
-                         aria-haspopup="true" aria-expanded="false">Basic dropdown</button>
+               <button class="btn btn-primary dropdown-toggle mr-auto mr-auto" type="button" data-toggle="dropdown"
+                         aria-haspopup="true" aria-expanded="false">Select Campaign</button>
 
                        <div class="dropdown-menu">
                           <a class="dropdown-item" href="#">Action</a>
