--- a/recruit.html
+++ b/recruit.html
@@ -207,6 +207,7 @@ background-color: #8500e5}
 
 .main-con{
 	border-radius: 20px;
+    margin-bottom: 30px;
 }
 
 .main-con:hover{
@@ -243,6 +244,7 @@ background-color: #8500e5}
     vertical-align: baseline;
     border-radius: .25rem;
 }
+
 
 .user-rank p{
 	font-size: 30px;
@@ -284,6 +286,8 @@ background-color: #8500e5}
     #content{
       margin-right:0px;
     }
+    .search-btn{
+    padding: 15px 15px;
 }
 </style>
 
@@ -422,7 +426,7 @@ background-color: #8500e5}
                                     </div>
 
                                     <div class="mt-3">
-                                        <a href="#" class="mr-1 badge badge-light">Fitness</a><a href="#" class="mr-1 badge badge-light">Life Style</a><a href="#" class="mr-1 badge badge-light">Gym</a><a href="#" class="badge badge-light">Crossfit</a>
+                                        <a href="#" class="mr-1 badge badge-light">Fitness</a><a href="#" class="mr-1 badge badge-light">Life Style</a><a href="#" class="mr-1 badge badge-light">Gym</a><a href="#" class="badge badge-light mt-2">Crossfit</a>
                                     </div>
 
                                     <div class="mt-3">
