Minor changes in text

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <script src="bootstrap-datetimepicker.min.js"></script> -->
 
 <style type="text/css">
+
   @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
    
    body {
@@ -625,7 +626,7 @@ background: linear-gradient(to right, #8E2AFF, #520988);
         <div class="form-group">
          <label for="custom-select">Platform</label>
             <select class="custom-select" required>
-               <option value="">Select Pltaform</option>
+               <option value="">Select Platform</option>
                <option value="1">Instagram</option>
                <option value="2">Facebook</option>
                <option value="3">Youtube</option>
