Small Changes in CC

--- a/create_campaign.html
+++ b/create_campaign.html
@@ -297,7 +297,7 @@ label {
 }
 
 #btn button{
-    font-size:18px;
+  font-size:18px;
   font-weight: 400;
   color: white;
 }
@@ -322,6 +322,19 @@ label {
         display: none;
     }}
 
+@media (max-width: 390px){
+  form{
+  padding: 5px;
+
+}
+.influencer{
+  padding: 0 15px;
+}
+#btn{
+  width: 150px;
+  padding:6px 5px; 
+}
+}
 </style>
 
 <body>
