--- a/index.html
+++ b/index.html
@@ -28,15 +28,6 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
   
 
-
-
-
-  
-
-<!-- <link rel="stylesheet" href="bootstrap-datetimepicker.min.css">
-
-<script src="bootstrap-datetimepicker.min.js"></script> -->
-
 <style type="text/css">
 
   @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
@@ -142,8 +133,8 @@ a:focus {
 }
 
 #sidebar ul li a i{
-  padding:0 12px;
-  font-size: 20px;
+  padding:0 15px;
+  font-size: 15px;
 }
 
 #sidebar ul li.active>a, a[aria-expanded="true"] {
@@ -341,27 +332,16 @@ background: linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2
                     <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
                 </li>
                 <li>
-                    <a href="campaign.html">Create Campaign</a>
+                    <a href="campaign.html"><i class="fa fa-plus"  aria-hidden="true"></i>Campaign</a>
                 </li>
                 <li>
-                    <a href="#pageSubmenu" aria-hidden="true">Explore</a>
-                    <!-- <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Page 1</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
-                        </li>
-                    </ul> -->
+                    <a href="#pageSubmenu" ><i class="fa fa-eye" aria-hidden="true"></i>Explore</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-inr" aria-hidden="true"></i>Payment</a>
                 </li>
                 <li>
-                    <a href="#">Requests</a>
+                    <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>Requests</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></i>Profile</a>
@@ -393,6 +373,9 @@ background: linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="influencer.html">For Influencer</a>
+                            </li>
+                             <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a>
                             </li>
                             </ul>
                     </div>
