--- a/recruit.html
+++ b/recruit.html
@@ -135,10 +135,9 @@ a:focus {
 }
 
 #sidebar ul li a i{
-  padding:0 12px;
-  font-size: 20px;
+  padding:0 15px;
+  font-size: 15px;
 }
-
 #sidebar ul li.active>a, a[aria-expanded="true"] {
     color: black;
     background: #f3f7f9;
@@ -320,31 +319,7 @@ background: linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2
                 <li >
                     <a href="recruit.html">Recruit</a>
                 </li>
-<!--                 <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Explore</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Page 1</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"></i>Social Accounts</a>
-                </li>
-                <li>
-                    <a href="#">Schedule Feature</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-inr" aria-hidden="true"></i></i>Payment</a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></i>Profile</a>
+"><i class="fa fa-user-o" aria-hidden="true"></i></i>Profile</a>
                 </li> -->
             </ul>
         </nav>
@@ -371,6 +346,9 @@ background: linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2
                             </li>
                             <li class="nav-item ">
                                 <a class="nav-link" href="influencer.html">For Influencer</a>
+                            </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a>
                             </li>
                         </ul>
                     </div>
