--- a/create_campaign.html
+++ b/create_campaign.html
@@ -131,8 +131,8 @@ a:focus {
 }
 
 #sidebar ul li a i{
-  padding:0 12px;
-  font-size: 20px;
+  padding:0 15px;
+  font-size: 15px;
 }
 
 #sidebar ul li.active>a, a[aria-expanded="true"] {
@@ -346,31 +346,20 @@ label {
             </div>
 
             <ul class="list-unstyled components">        
-                 <li class="active">
-                    <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+                  <li >
+                    <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
+                </li>
+                <li class="active">
+                    <a href="campaign.html"><i class="fa fa-plus"  aria-hidden="true"></i>Campaign</a>
                 </li>
                 <li>
-                    <a href="campaign.html">Create Campaign</a>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" aria-hidden="true">Explore</a>
-                    <!-- <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Page 1</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
-                        </li>
-                    </ul> -->
+                    <a href="#pageSubmenu" ><i class="fa fa-eye" aria-hidden="true"></i>Explore</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-inr" aria-hidden="true"></i>Payment</a>
                 </li>
                 <li>
-                    <a href="#">Requests</a>
+                    <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>Requests</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-user-o" aria-hidden="true"></i></i>Profile</a>
@@ -402,6 +391,9 @@ label {
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="influencer.html">For Influencer</a>
+                            </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a>
                             </li>
                             </ul>
                     </div>
