--- a/influencer.html
+++ b/influencer.html
@@ -80,8 +80,8 @@ a:focus {
 }
 
 #sidebar {
-    min-width: 220px;
-    max-width:220px;
+    min-width: 240px;
+    max-width:240px;
     height: 100%; 
     background: /* #8300e5*/#20509e; 
     color:white;
@@ -94,7 +94,7 @@ a:focus {
 }
 
 #sidebar.active {
-    margin-left: -220px;
+    margin-left: -240px;
 }
 
 .sidebar-header {
@@ -133,10 +133,9 @@ a:focus {
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
 }
-
 #sidebar ul li a i{
-  padding:0 12px;
-  font-size: 20px;
+  padding:0 15px;
+  font-size: 15px;
 }
 
 #sidebar ul li.active>a, a[aria-expanded="true"] {
@@ -186,7 +185,7 @@ a[data-toggle="collapse"] {
 }
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -220px;
+        margin-left: -240px;
     }
     #sidebar.active {
         margin-left: 0;
@@ -210,29 +209,19 @@ a[data-toggle="collapse"] {
                     <a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
                 </li>
                 <li>
-                    <a href="#"></i>Social Accounts</a>
+                    <a href="#"><i class="fa fa-user-circle" aria-hidden="true"></i></i>Social Accounts</a>
                 </li>
                 <li >
-                    <a href="#">Offers</a>
+                    <a href="#"><i class="fa fa-gift" aria-hidden="true"></i>Offers</a>
                 </li>
                 <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Explore</a>
-                    <!-- <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Page 1</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
-                        </li>
-                    </ul> -->
+                    <a href="#pageSubmenu"><i class="fa fa-compass" aria-hidden="true"></i>Find Campaigns</a>
+                   
                 </li>
                 
-                <li>
+               <!--  <li>
                     <a href="#">Schedule Feature</a>
-                </li>
+                </li> -->
                 <li>
                     <a href="#"><i class="fa fa-inr" aria-hidden="true"></i></i>Payment</a>
                 </li>
@@ -266,6 +255,9 @@ a[data-toggle="collapse"] {
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="influencer.html">For Influencer</a>
+                            </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-user-circle" style="font-size: 20px;"></i></a>
                             </li>
                             </ul>
                     </div>
