--- a/recruit.html
+++ b/recruit.html
@@ -198,11 +198,19 @@ a[data-toggle="collapse"] {
  .mt-n8 {
     margin-top: -50px!important;
 }
+button:focus {outline:0 !important;}
 
 .search-btn{
 padding: 15px 45px;
  border-radius: 8px;
-background: linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2dd3aa 100%);}
+background: /*linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2dd3aa 100%);*/ #1F409E;}
+
+.search-btn:active{
+  background:  #1F409E;
+}
+.search-btn:hover{
+  background:  #20509e;
+}
 
 .influencer{
 	padding: 0px 30px; 
@@ -319,8 +327,6 @@ background: linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2
                 <li >
                     <a href="recruit.html">Recruit</a>
                 </li>
-"><i class="fa fa-user-o" aria-hidden="true"></i></i>Profile</a>
-                </li> -->
             </ul>
         </nav>
 
