--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ button:focus {outline:0 !important;}
 
 #buttons .btn{
   align-items: center;
-background: linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2dd3aa 100%);
+background: /*linear-gradient(to right, #3e2bce 0%, #2dd3aa 100%, #2dd3aa 100%, #2dd3aa 100%)*/  #1F409E;
   color: white;
   margin: 20px auto; 
   border:none !important;
